[tool.poetry]
name = "car_bot"
version = "0.1.0"
description = "Test bot for easy selling dashcam for various cars"
authors = ["Ba1sars"]
readme = "README.md"


[tool.poetry.scripts]
parsing = "car_bot.database.database_commands:parsing_data"

[tool.poetry.dependencies]
python = "^3.11"
prompt = "^0.4.1"
prettytable = "^3.12.0"
accessify = "^0.3.1"
dotenv = "^0.9.9"
requests = "^2.32.3"
bs4 = "^0.0.2"
telebot = "^0.0.5"
lxml = "^5.3.1"
logging = "^0.4.9.6"
datetime = "^5.5"
aiohttp = "^3.11.18"
aiogram = "^3.20.0"
loguru = "^0.7.3"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.2.0"
ruff = "^0.9.6"
isort = "^5.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"